--- a/CustomDifficulty/CustomDifficulty.csproj
+++ b/CustomDifficulty/CustomDifficulty.csproj
@@ -34,11 +34,13 @@
   <ItemGroup>
     <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>F:\TShock\en\Newtonsoft.Json.dll</HintPath>
+      <HintPath>Refs\Newtonsoft.Json.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="OTAPI, Version=1.3.4.4, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>F:\TShock\en\OTAPI.dll</HintPath>
+      <HintPath>Refs\OTAPI.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -50,11 +52,13 @@
     <Reference Include="System.Xml" />
     <Reference Include="TerrariaServer, Version=1.3.4.4, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>F:\TShock\en\TerrariaServer.exe</HintPath>
+      <HintPath>Refs\TerrariaServer.exe</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="TShockAPI, Version=4.3.23.0, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>F:\TShock\en\ServerPlugins\TShockAPI.dll</HintPath>
+      <HintPath>Refs\TShockAPI.dll</HintPath>
+      <Private>False</Private>
     </Reference>
   </ItemGroup>
   <ItemGroup>
